adding config orm migrations